# safequery

./: PRD.md  PROMO.md  README.md  pyproject.toml
benchmarks/: latency.py
safequery/: __init__.py  cli.py  config.py  core.py  models.py
safequery/checker/: __init__.py
safequery/integrations/: __init__.py
safequery/parser/: __init__.py  parse.py
safequery/policy/: __init__.py
safequery/reporter/: __init__.py
safequery/rules/: __init__.py  engine.py
tests/: test_cli.py  test_config.py  test_core.py  test_parser.py  test_rules.py
