[project]
name = "safequery"
version = "0.1.0"
description = "A safety layer between your AI agent and your database"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=20.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
safequery = "safequery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
