[project]
name = "safequery"
version = "0.1.0"
description = "A safety layer between your AI agent and your database — block catastrophic SQL before it executes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "rickyruima" }]
keywords = ["sql", "ai-agents", "llm", "database-safety", "postgres", "security", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Security",
]
dependencies = [
    "sqlglot>=20.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/rickyruima/safequery"
Repository = "https://github.com/rickyruima/safequery"
Issues = "https://github.com/rickyruima/safequery/issues"

[project.scripts]
safequery = "safequery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
